# TrevailoMinerGPU

./: .gitignore  Cargo-test.toml  Cargo.toml  OpenCL.def  OpenCL.exp  OpenCL.lib  README.md  build_opencl_lib.ps1  config.json  languagepack.json
.cargo/: config.toml
src/: gpu_kernel.rs  http.rs  i18n.rs  main.rs  miner.rs
