[package]
name = "trevailo-miner"
version = "0.0.5"
edition = "2021"
description = "Trevailo Coin CLI Miner"

[[bin]]
name = "trevailo-miner"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10" }
hex = "0.4"
anyhow = "1"
opencl3 = "0.9.5"
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
